--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,9 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Get Conan
-      uses: turtlebrowser/get-conan@v1.2
+      uses: turtlebrowser/get-conan@main
+      with:
+        version: 1.59.0
       
     - name: Create default profile
       run: conan profile new default --detect
