--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      
+    - name: Run executable
+      run: cd ${{github.workspace}}/build && ./restapi-boilerplate
 
     #- name: Test
       #working-directory: ${{github.workspace}}/build
