--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
       
     - name: Run executable
-      run: cd ${{github.workspace}}/build && ./restapi-boilerplate
+      run: cd ${{github.workspace}}/build && ls
 
     #- name: Test
       #working-directory: ${{github.workspace}}/build
