--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,29 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Get Conan
-      uses: turtlebrowser/get-conan@main
-      with:
-        version: 1.59.0
-      
-    - name: Create default profile
-      run: conan profile new default --detect
-      
-    - name: Update profile
-      run: conan profile update settings.compiler.libcxx=libstdc++11 default
-      
-    - name: Install dependencies
-      run: conan install . -s build_type=${{env.BUILD_TYPE}} --install-folder=${{github.workspace}}/build
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Configure vcpkg
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git
+        cd vcpkg && ./bootstrap-vcpkg.sh
 
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    - name: Configure the VCPKG_ROOT environment variable
+      run: |
+        export VCPKG_ROOT=${{github.workspace}}/vcpkg
+        export PATH=$VCPKG_ROOT:$PATH
 
-    #- name: Test
-      #working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      #run: ctest -C ${{env.BUILD_TYPE}}
+    - name: Configure the build using CMake
+      run: cmake --preset=default
+
+    - name: Build the project
+      working-directory: ${{github.workspace}}/build
+      run: cmake --build . --config ${{env.BUILD_TYPE}}
