--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -1,4 +1,4 @@
-name: "Build code and run unit tests"
+name: "Build project and run unit tests"
 
 on:
   pull_request:
@@ -9,11 +9,11 @@ env:
   VCPKG_ROOT: ${{github.workspace}}/vcpkg
 
 jobs:
-  build:
-    name: "Build source code"
+  build_linux:
+    name: "Linux Build (Debug)"
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v4.1.1  
 
     - name: Configure vcpkg
@@ -27,3 +27,12 @@ jobs:
     - name: Build project
       working-directory: ${{github.workspace}}/build
       run: cmake --build . --config ${{env.BUILD_TYPE}}
+
+  build_windows:
+    name: "Windows Build (Debug)"
+    runs-on: windows-latest
+    steps:
+    - name: Configure vcpkg
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git
+        cd vcpkg && ./bootstrap-vcpkg.sh
