--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -14,7 +14,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         build_type: [Debug, Release]
 
-    name: "${{ matrix.os }} build (${{ matrix.build_type }})"
+    name: "${{ runner.os }} build (${{ matrix.build_type }})"
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout repository
